Project/CompilerProject/minijava2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------


// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162

 
	using System;
	using CompilerProject.GrammarElements;
    using CompilerProject.GrammarElements;


using System.Collections.Generic;
using Antlr.Runtime;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  MiniJavaSyntax 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class minijava2Parser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "BLOCK_COMMENT", "BOOL", "BOOLEAN", "CLASS", "CLASSDECL", "CLASSVARDECL", "CLASSVARDECLLIST", "COMMA", "DIGIT", "DIV", "DOT", "DOUBLE", "ELIST", "ELSE", "EQUAL", "EXPONENT", "EXTENDS", "FALSE", "FLOAT", "FORMALLIST", "HIDDEN", "ID", "IF", "INT", "INTEGER", "LAND", "LBRACK", "LCURLY", "LENGTH", "LESS", "LESSEQ", "LETTER", "LINE_COMMENT", "LNOT", "LOR", "LPAREN", "MAIN", "MAINCLASSDECL", "METHODDECL", "METHODDECLLIST", "METHOD_CALL", "MINUS", "MORE", "MOREEQ", "NEQUAL", "NEW", "NULL", "PLUS", "PRINT", "PRINT2", "PROGRAM", "PUBLIC", "RBRACK", "RCURLY", "RETURN", "RPAREN", "SEMI", "SLIST", "STAR", "STATIC", "STMT", "STRING", "THIS", "TRUE", "TYPE", "UNARY_MINUS", "VARDECL", "VOID", "WHILE", "WHITESPACE"
	};
	public const int EOF=-1;
	public const int ASSIGN=4;
	public const int BLOCK_COMMENT=5;
	public const int BOOL=6;
	public const int BOOLEAN=7;
	public const int CLASS=8;
	public const int CLASSDECL=9;
	public const int CLASSVARDECL=10;
	public const int CLASSVARDECLLIST=11;
	public const int COMMA=12;
	public const int DIGIT=13;
	public const int DIV=14;
	public const int DOT=15;
	public const int DOUBLE=16;
	public const int ELIST=17;
	public const int ELSE=18;
	public const int EQUAL=19;
	public const int EXPONENT=20;
	public const int EXTENDS=21;
	public const int FALSE=22;
	public const int FLOAT=23;
	public const int FORMALLIST=24;
	public const int HIDDEN=25;
	public const int ID=26;
	public const int IF=27;
	public const int INT=28;
	public const int INTEGER=29;
	public const int LAND=30;
	public const int LBRACK=31;
	public const int LCURLY=32;
	public const int LENGTH=33;
	public const int LESS=34;
	public const int LESSEQ=35;
	public const int LETTER=36;
	public const int LINE_COMMENT=37;
	public const int LNOT=38;
	public const int LOR=39;
	public const int LPAREN=40;
	public const int MAIN=41;
	public const int MAINCLASSDECL=42;
	public const int METHODDECL=43;
	public const int METHODDECLLIST=44;
	public const int METHOD_CALL=45;
	public const int MINUS=46;
	public const int MORE=47;
	public const int MOREEQ=48;
	public const int NEQUAL=49;
	public const int NEW=50;
	public const int NULL=51;
	public const int PLUS=52;
	public const int PRINT=53;
	public const int PRINT2=54;
	public const int PROGRAM=55;
	public const int PUBLIC=56;
	public const int RBRACK=57;
	public const int RCURLY=58;
	public const int RETURN=59;
	public const int RPAREN=60;
	public const int SEMI=61;
	public const int SLIST=62;
	public const int STAR=63;
	public const int STATIC=64;
	public const int STMT=65;
	public const int STRING=66;
	public const int THIS=67;
	public const int TRUE=68;
	public const int TYPE=69;
	public const int UNARY_MINUS=70;
	public const int VARDECL=71;
	public const int VOID=72;
	public const int WHILE=73;
	public const int WHITESPACE=74;

	// delegates
	// delegators

	public minijava2Parser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public minijava2Parser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);

		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();


		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return minijava2Parser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g"; } }



		public ProgramStatement result;
		private bool flagDebug = false;
		
		///public const int HIDDEN = -10;
		public const int NONE = -1;
		
		//private List<BaseOperator> bufferTerm = new List<BaseOperator>();
		//private List<BaseOperator> bufferOperator = new List<BaseOperator>();
		
		List<RecognitionException> exceptions = new List<RecognitionException>();

		public override void ReportError(RecognitionException e)
		{
		    exceptions.Add(e);
		}
		
		public bool HasError
		{
			get { return exceptions.Count > 0; }
		}
		
		public string ErrorMessage
		{
			get { return this.GetErrorMessage(exceptions[0], this.TokenNames); }
		}
		
		public string ErrorPosition
		{
			get { return this.GetErrorHeader(exceptions[0]); }
		}



	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		public NonTerm value;
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public program_return(minijava2Parser grammar) {OnCreated(grammar);}
		partial void OnCreated(minijava2Parser grammar);
	}

	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:80:1: public program returns [NonTerm value] : mainClass= mainClassDecl classes= classDeclList EOF ;
	[GrammarRule("program")]
	public minijava2Parser.program_return program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		minijava2Parser.program_return retval = new minijava2Parser.program_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken EOF1 = default(IToken);
		minijava2Parser.mainClassDecl_return mainClass = default(minijava2Parser.mainClassDecl_return);
		minijava2Parser.classDeclList_return classes = default(minijava2Parser.classDeclList_return);

		CommonTree EOF1_tree = default(CommonTree);

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(80, 1);
		try
		{
			// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:81:2: (mainClass= mainClassDecl classes= classDeclList EOF )
			DebugEnterAlt(1);
			// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:82:3: mainClass= mainClassDecl classes= classDeclList EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(82, 12);
			PushFollow(Follow._mainClassDecl_in_program163);
			mainClass=mainClassDecl();
			PopFollow();

			adaptor.AddChild(root_0, mainClass.Tree);
			DebugLocation(82, 34);
			PushFollow(Follow._classDeclList_in_program167);
			classes=classDeclList();
			PopFollow();

			adaptor.AddChild(root_0, classes.Tree);
			DebugLocation(82, 52);
			EOF1=(IToken)Match(input,EOF,Follow._EOF_in_program169); 
			DebugLocation(83, 3);
			 
						//#program = #(#[PROGRAM], #program); 
						List<BaseSymbol> symbols = new List<BaseSymbol>();
						//symbols.Add((BaseSymbol)(new NonTerm((NonTerm)mainClass.value)));
						symbols.Add(mainClass.value);
						symbols.AddRange(classes.valueList);
						//retval.value = new NonTerm(NonTermType.Program, symbols);
						//result = new ProgramStatement(mainClass.value, classes.valueList);
						retval.value = NonTermFactory.CreateProgramStatement(mainClass.value, classes.valueList);
						if (flagDebug) Console.WriteLine("program");
					

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(94, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	private sealed partial class classDeclList_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		public List<BaseSymbol> valueList;
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public classDeclList_return(minijava2Parser grammar) {OnCreated(grammar);}
		partial void OnCreated(minijava2Parser grammar);
	}

	partial void EnterRule_classDeclList();
	partial void LeaveRule_classDeclList();

	// $ANTLR start "classDeclList"
	// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:96:1: classDeclList returns [ List<BaseSymbol> valueList ] : (classD= classDecl )* ;
	[GrammarRule("classDeclList")]
	private minijava2Parser.classDeclList_return classDeclList()
	{
		EnterRule_classDeclList();
		EnterRule("classDeclList", 2);
		TraceIn("classDeclList", 2);
		minijava2Parser.classDeclList_return retval = new minijava2Parser.classDeclList_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		minijava2Parser.classDecl_return classD = default(minijava2Parser.classDecl_return);



				retval.valueList = new List<BaseSymbol>();
			
		try { DebugEnterRule(GrammarFileName, "classDeclList");
		DebugLocation(96, 1);
		try
		{
			// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:101:2: ( (classD= classDecl )* )
			DebugEnterAlt(1);
			// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:102:3: (classD= classDecl )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(102, 3);
			// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:102:3: (classD= classDecl )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CLASS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:102:5: classD= classDecl
					{
					DebugLocation(102, 11);
					PushFollow(Follow._classDecl_in_classDeclList204);
					classD=classDecl();
					PopFollow();

					adaptor.AddChild(root_0, classD.Tree);
					DebugLocation(103, 3);

								retval.valueList.Add(classD.value);
							

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(107, 3);
			 
						//#stmtList = #(#[SLIST], #stmtList); 
						/*if (classD != null)
						{
							retval.valueList.Add(classD.value);
						}*/
					

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("classDeclList", 2);
			LeaveRule("classDeclList", 2);
			LeaveRule_classDeclList();
		}
		DebugLocation(114, 1);
		} finally { DebugExitRule(GrammarFileName, "classDeclList"); }
		return retval;

	}
	// $ANTLR end "classDeclList"

	private sealed partial class mainClassDecl_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>, IAstRuleReturnScope
	{
		public NonTerm value;
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public mainClassDecl_return(minijava2Parser grammar) {OnCreated(grammar);}
		partial void OnCreated(minijava2Parser grammar);
	}

	partial void EnterRule_mainClassDecl();
	partial void LeaveRule_mainClassDecl();

	// $ANTLR start "mainClassDecl"
	// D:\\University\\Конструирование компиляторов\\MiniJavaCompiler\\Project\\minijava2.g:116:1: mainClassDecl returns [NonTerm value] : CLASS id= ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACK RBRACK ID RPAREN LCURLY statement= stmtList RCURLY RCURLY ;
	[GrammarRule("mainClassDecl")]
	private minijava2Parser.mainClassDecl_return mainClassDecl()
	{
		EnterRule_mainClassDecl();
		EnterRule("mainClassDecl", 3);
		TraceIn("mainClassDecl", 3);
		minijava2Parser.mainClassDecl_return retval = new minijava2Parser.mainClassDecl_return(this);
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = default(CommonTree);

		IToken id = default(IToken);
		IToken CLASS2 = default(IToken);
		IToken LCURLY3 = default(IToken);
		IToken PUBLIC4 = default(IToken);
		IToken STATIC5 = default(IToken);
		IToken VOID6 = default(IToken);
		IToken MAIN7 = default(IToken);
		IToken LPAREN8 = default(IToken);
		IToken STRING9 = default(IToken);
		IToken LBRACK10 = default(IToken);
		IToken RBRACK11 = default(IToken);
		IToken ID12 = default(IToken);
		IToken RPAREN13 = default(IToken);
		IToken LCURLY14 = default(IToken);
		IToken RCURLY15 = default(IToken);
		IToken RCURLY16 = default(IToken);
		minijava2Parser.stmtList_return statement = default(minijava2Parser.stmtList_return);
